# RustLang2023

./: Cargo.toml  Makefile  README.md  justfile  scrap.md
actix_todo/: Cargo.toml
actix_todo/src/: main.rs
actix_todo/src/to_do/: enums.rs  mod.rs
actix_todo/src/to_do/structs/: base.rs  done.rs  mod.rs  pending.rs
actix_web_app/: Cargo.toml
actix_web_app/src/: main.rs
actix_web_app/src/views/: mod.rs
actix_web_app/src/views/auth/: login.rs  logout.rs  mod.rs
control_flow/src/: main.rs
control_flow/src/mods/models/: object.rs
control_flow/src/mods/utils/: utilities.rs
demo-hashmaps/: Cargo.toml
demo-hashmaps/src/: lib.rs  main.rs
demo-hashmaps/src/models/: coffee.rs
demo-hashmaps/src/utils/: utils.rs
demo-vectors/: Cargo.toml
demo-vectors/src/: lib.rs  main.rs
demo-vectors/src/models/: coffee.rs
demo-vectors/src/utils/: utils.rs
dog_scraper/: Cargo.toml  rustc-ice-2023-08-16T19:38:57.611057Z-64252.txt
dog_scraper/src/: main.rs
dog_scraper/src/mods/: mod.rs
dog_scraper/src/mods/scraper/: mod.rs  web_scraper.rs
dog_scraper/src/mods/site/: criteria.rs  mod.rs  (+1 more)
flight-example/: Cargo.toml
flight-example/src/: main.rs
flight-example/src/mods/: mod.rs
http/: .gitignore
http/src/: httprequest.rs  httpresponse.rs  lib.rs
leptos-tutorial/: Cargo.toml  justfile
leptos-tutorial/src/: app.rs  main.rs
leptos-tutorial/src/mods/: mod.rs
leptos-tutorial/src/mods/components/: app.rs  global_styles.rs  mod.rs
leptos-tutorial/src/mods/models/: flight.rs  mod.rs
leptos-tutorial/src/mods/utils/: utilities.rs
rust-axum-app/: Cargo.toml
rust-axum-app/src/: lib.rs  main.rs
rust-axum-app/src/models/: health.rs  login.rs
rust-axum-app/src/routes/: handlers.rs  router.rs
rust-axum-app/src/server/: run_server.rs
rust-axum-app/src/utils/: error.rs  utilities.rs
rust-axum-app/src/web/: handlers.rs  router.rs
rust-axum-app/src/web/auth/: routes_login.rs
rust-axum-app/tests/: quick_dev.rs
structs_methods/src/: main.rs
structs_methods/src/mods/: mod.rs
tcpclient/src/: main.rs
tcpserver/src/: main.rs
tutor-nodb/: Cargo.toml
tutor-nodb/src/: handlers.rs  models.rs  routes.rs  state.rs  types.rs
user_input/src/: main.rs
user_input/src/mods/: mod.rs
zero2prod/: Cargo.toml
zero2prod/src/: main.rs
(+12 files in other folders)
