# ___________________________________________________________
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
# ___________________________________________________________

members = [
    "structs_methods",
    "control_flow",
    "tutor-nodb",
    "actix_web_app",
    "actix_todo",
    "dog_scraper",
    "leptos-tutorial"
]

resolver = "2"
# ___________________________________________________________

