# ___________________________________________________________
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
# ___________________________________________________________

members = [
    "structs_methods",
    "control_flow",
    "tutor-nodb",
    "actix_web_app",
    "dog_scraper",
    "leptos-tutorial",
    "flight-example",
    "rust-axum-app"
]

resolver = "2"
# ___________________________________________________________

