[package]
name = "rust-axum-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
tokio = { version = "1.33.0", features = ["full"] }
tower-http = { version = "0.4.4", features = ["fs"] }

[dev-dependencies]
anyhow = "1.0.75"
# Built on top of reqwest.
#Optimized for testing convenience, not for performance.
#Do not use for production/application code, just for testing.
#For production code (apps, services, ...) use the underlying
# reqwest library and its utilities.
httpc-test = "0.1.7"
